--- a/lemonade_stand/data/generate_data_lemonade.ipynb
+++ b/lemonade_stand/data/generate_data_lemonade.ipynb
@@ -2,115 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "0399ac61",
+   "execution_count": 73,
+   "id": "0f601031",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import sys\n",
+    "sys.path.append('./')\n",
+    "\n",
+    "import genericpath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "6a05681c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_features(N):\n",
-    "    # features X contain:\n",
-    "    # x1: temperature\n",
-    "    # x2: rainfall intensity\n",
-    "    # x3: weekday\n",
-    "\n",
-    "    x1 = np.random.normal(loc=20.0, scale=4.0, size=N)\n",
-    "\n",
-    "    rainfall_intensity = [\n",
-    "        0, # No rain\n",
-    "        1, # Light rain\n",
-    "        2, # Moderate rain \n",
-    "        3, # Heavy rain\n",
-    "        4  # Violent rain\n",
-    "    ]\n",
-    "\n",
-    "    prob_rain = [\n",
-    "        0.70, # No rain prob\n",
-    "        0.15, # Light rain prob\n",
-    "        0.08, # Moderate rain prob\n",
-    "        0.05, # Heavy rain prob\n",
-    "        0.02  # Violent rain prob\n",
-    "    ]\n",
-    "\n",
-    "    x2 = np.random.choice(rainfall_intensity, size=N, p=prob_rain)\n",
-    "\n",
-    "    weekdays = [\n",
-    "        0, # Sunday\n",
-    "        1, # Monday\n",
-    "        2, # Tuesday\n",
-    "        3, # Wednesday\n",
-    "        4, # Thursday\n",
-    "        5, # Friday\n",
-    "        6, # Saturday\n",
-    "    ]\n",
-    "\n",
-    "    x3 = np.random.choice(weekdays, size=N)\n",
-    "    \n",
-    "    X = np.stack((x1, x2, x3), axis=1)\n",
-    "    return X\n",
-    "    \n",
-    "\n",
-    "def calculate_real_demand(x):\n",
-    "\n",
-    "    # Calculate rain factor\n",
-    "    rain_factor = 1.0\n",
-    "    if x[1] == 4:\n",
-    "        rain_factor = 0.0\n",
-    "    elif x[1] == 3:\n",
-    "        rain_factor = 0.1\n",
-    "    elif x[1] == 2:\n",
-    "        rain_factor = 0.2\n",
-    "    elif x[1] == 1:\n",
-    "        rain_factor = 0.5\n",
-    "\n",
-    "    # Calculate weekday factor\n",
-    "    weekdays_factor = 1.0\n",
-    "    if x[2] == 0:\n",
-    "        weekdays_factor = 1.5\n",
-    "    elif x[2] == 6:\n",
-    "        weekdays_factor = 2\n",
-    "    elif x[2] == 5:\n",
-    "        weekdays_factor = 1.5\n",
-    "    elif x[2] == 4:\n",
-    "        weekdays_factor = 1.1\n",
-    "        \n",
-    "    # Generate real demand\n",
-    "    y = ((50 + 10*x[0])*rain_factor*weekdays_factor).clip(min = 0)\n",
-    "    return y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "e2cfa746",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = create_features(N=1000)\n",
-    "\n",
-    "y = np.apply_along_axis(func1d = calculate_real_demand, \n",
-    "                        axis = 1,\n",
-    "                        arr = X)\n",
-    "\n",
-    "data = pd.DataFrame(np.column_stack((X,y)), columns=['x1','x2','x3','y'])\n",
-    "\n",
-    "data.to_csv('lemonade_data.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "c4629632",
+   "execution_count": null,
+   "id": "d10bfc8d",
    "metadata": {},
    "outputs": [],
    "source": []
